User API, Chat API